Use overflow-wrap: break-word for post style to prevent x-axis scroll

--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -163,6 +163,7 @@ main {
 	font-weight: 300;
 	color: #222;
 	line-height: 1.9em;
+	overflow-wrap: break-word;
 	a {
 		color: $linkColor;
 		text-decoration: none;
